--- a/table1.html
+++ b/table1.html
@@ -72,7 +72,7 @@
 	   <li class='has-sub'><a href='#'>常用連結</a>
           <ul>
           	 <li><a href='https://120.108.117.245/moodle/login/index.php'>Moodle</a></li>
-          	 <li><a href='#'>亞洲泛舟網</a></li>
+          	 <li><a href='Rafting.html'>亞洲泛舟網</a></li>
           </ul>
 	   </li>
 	   <li><a href='404page.html'><i class="fa fa-circle-o-notch fa-spin"></i> 聯絡我</a></li>
