--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="JS/cssmeun.js"></script>
-		<script>
-	    $('.carousel').carousel({
-	        interval: 3000 //換圖速度(1000=1秒)
-	    })
+	<script>
+		$(document).ready(function () {
+			$('.carousel').carousel({
+				interval: 3000 //換圖速度(1000=1秒)
+			})
+		});
 	</script>
 </head>
 
